10/13/2021
    Merge Epochs branch to master

05/18/2021
    Change the minimum valid date for the dateSpec date-picker in current.html
    to 2018-02-04.  The format of the Today's Paper article lists changed on 
    2018-02-04, and the code in the sectionScrape function does not work on 
    the earlier format.
    - Change current-renderer.js to remove the statements that read the NYT Recipes 
        directory to find the earliest year.  Set dateSpec.min to '2018-02-04'.

02/24/2021
    Consolidate Cheerio HTML loads and check for duplicate recipe links in an article
    - Updated current-renderer.js function artScrape to load article page HTML into a Cheerio object and
        pass that object to subfunctions getTitle and getRecipe, instead of passing the article page HTML
        to those subfunctions
    - Updated current-renderer.js function TPScrape to load Today's Paper HTML into a Cheerio and pass that
        object to subfunction sectionScrape, instead of passing the Today's Paper HTML to that subfunction
    - Updated current-renderer.js function artScrape subfunction getRecipe to check the recipeList array
        for a duplicate recipe link before pushing a recipe object to the array

02/19/2021
    Add support for recipe links in H3 elments
    - Updated the GetRecipes function in current-renderer.js to look for recipe links in H3 elements and also
    - Updated GetRecipes to always check for all recipe link types, instead of checking a link type only 
        if the prior test for a link type found no instances.

02/05/2021
    When an existing day is changed, rename existing Days file to Old_yyyy-mm-dd.txt 
    and write updated file as yyyy-mm-dd.txt, instead of writing updated file to
    NotSame_yyyy-mm-dd.txt
    - Updated lib.js NewDays function 

01/31/2021
    Replace app.remote with handle/invoke
    - Updated index.js to add ipcMain.handle to return appPath and appName